--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: Kbmajeed Portfolio
 # User settings
 username: Kabir Abdulmajeed
 user_description: 
-user_title: Data Scientist
+user_title: Data Science Consultant
 email: kbmajeed1@gmail.com
 twitter_username: kbmajeed1
 github_username:  kbmajeed
